Add customer's car to order domain [backend]
