# backend/monolith/internal/domains/order/application/dto/order.go
@@ -19,6 +19,12 @@ type OrderDTO struct {
 	TotalDistanceMeters  *int32              `json:"total_distance_meters,omitempty"`
 	HowManyWheelsBlocked int16               `json:"how_many_wheels_blocked"`
 	PriceRubles          *int32              `json:"price_rubles,omitempty"`
+	CarWeightKg          int32               `json:"car_weight_kg"`
+	CarLengthMeters      float32             `json:"car_length_meters"`
+	CarType              string              `json:"car_type"`
+	CarName              string              `json:"car_name"`
+	CarPhotoUrl          *string             `json:"car_photo_url,omitempty"`
+	CustomerMessage      *string             `json:"customer_message,omitempty"`
 	Status               entity.OrderStatus  `json:"status"`
 	AcceptedAt           *time.Time          `json:"accepted_at,omitempty"`
 	PickedUpAt           *time.Time          `json:"picked_up_at,omitempty"`
@@ -41,6 +47,12 @@ func FromEntity(o *entity.Order) OrderDTO {
 		TotalDistanceMeters:  o.TotalDistanceMeters,
 		HowManyWheelsBlocked: o.HowManyWheelsBlocked,
 		PriceRubles:          o.PriceRubles,
+		CarWeightKg:          o.CarWeightKg,
+		CarLengthMeters:      o.CarLengthMeters,
+		CarType:              o.CarType,
+		CarName:              o.CarName,
+		CarPhotoUrl:          o.CarPhotoUrl,
+		CustomerMessage:      o.CustomerMessage,
 		Status:               o.Status,
 		AcceptedAt:           o.AcceptedAt,
 		PickedUpAt:           o.PickedUpAt,
