# backend/monolith/internal/domains/order/interface/http/router.go
@@ -11,6 +11,7 @@ func RegisterOrderRoutes(router *gin.RouterGroup, h *OrderHandler, authMiddlewar
 	{
 		order.POST("", wrapper.CreateOrder)
 		order.GET("/my", wrapper.ListMyOrders)
+		order.DELETE("/my/active", wrapper.DeleteMyActiveOrder)
 		order.GET("/:order_id", wrapper.GetOrder)
 		order.PUT("/:order_id", wrapper.UpdateOrder)
 		order.PATCH("/:order_id/status", wrapper.UpdateOrderStatus)
